fixed some "bugs(:-|)" and added some shortcuts ctrl+enter > insert todo after current todo enter > focus on next todo or create new todo if next is not available shift+enter > focus on previous todo

--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,8 @@ input[type="checkbox"]:focus {
 /* } */
 
 .todo-finished {
-  text-decoration: line-through;
+  text-decoration: line-through rgba(255,255,255,0.6);
+  color: #d7d7d7;
 }
 
 #add-btn {
